// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link スナップショット Default 1`] = `
<body>
  <div>
    <a
      class="link_linkStyle__jc9bkl0"
      href="#"
    >
      Default Link
    </a>
  </div>
</body>
`;

exports[`Link スナップショット Variants 1`] = `
<body>
  <div>
    <div>
      <a
        class="link_linkStyle__jc9bkl0 link_linkStyle_colored_true__jc9bkl1"
        href="#"
      >
        Colored Link
      </a>
    </div>
    <div>
      <a
        class="link_linkStyle__jc9bkl0 link_linkStyle_underlined_true__jc9bkl2"
        href="#"
      >
        Underlined Link
      </a>
    </div>
    <div>
      <a
        class="link_linkStyle__jc9bkl0 link_linkStyle_noHovered_true__jc9bkl3"
        href="#"
      >
        no hovered Link
      </a>
    </div>
    <div>
      <a
        class="link_linkStyle__jc9bkl0 link_linkStyle_display_block__jc9bkl4"
        href="#"
      >
        <div
          style="border-radius: var(--radius-100__13jk9q11g);"
        >
          Block Link
        </div>
      </a>
    </div>
  </div>
</body>
`;
